quoting-CypressTK1/force-app/main/default/objects/ScopeParameter__c/ScopeParameter__c.object-meta.xml
<CustomObject>
    <label>Scope Parameter</label>
    <nameField>
        <label>Scope Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>