quoting-CypressTK1/force-app/main/default/objects/ScopeParameter__c/fields/ActivityGroupId__c.field-meta.xml
<CustomField>
    <fullName>ActivityGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Group</label>
    <referenceTo>ActivityGroup__c</referenceTo>
    <relationshipLabel>Scope Parameters</relationshipLabel>
    <relationshipName>ScopeParameters</relationshipName>
    <type>Lookup</type>
</CustomField>