quoting-CypressTK1/force-app/main/default/objects/ScopeParameter__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Scope Parameters</relationshipLabel>
    <relationshipName>ScopeParameters</relationshipName>
    <type>Lookup</type>
</CustomField>