quoting-CypressTK1/force-app/main/default/objects/ScopeParameter__c/fields/EstimateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Scope Parameters</relationshipLabel>
    <relationshipName>ScopeParameters</relationshipName>
    <type>Lookup</type>
</CustomField>