quoting-CypressTK1/force-app/main/default/objects/ScopeParameter__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope Parameter Template</label>
    <referenceTo>ScopeParameterTemplate__c</referenceTo>
    <relationshipName>ScopeParameters</relationshipName>
    <type>Lookup</type>
</CustomField>